// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Domain should call addGroupDomain from mapDispatchToProps 1`] = `
Object {
  "payload": "domain",
  "type": "CreateGroup/ADD_GROUP_DOMAIN",
}
`;

exports[`Domain should call fetchGroupExists from mapDispatchToProps 1`] = `
Object {
  "graphql": Object {
    "query": "
        query ($slug: String) {
          groupExists (slug: $slug) {
            exists
          }
        }
      ",
    "variables": Object {
      "slug": "slug",
    },
  },
  "type": "CreateGroup/FETCH_GROUP_EXISTS",
}
`;

exports[`Domain should call goHome from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Domain should call goToNextStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-group/review",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Domain should call goToPreviousStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-group/name",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
